--- a/style.css
+++ b/style.css
@@ -367,9 +367,8 @@ li {
 /* SETTINGS PAGE START */
 /* ICONS */
 
-
 i {
-    font-family: fontawesome !important;
+  font-family: fontawesome !important;
 }
 
 #sbicon1 {
@@ -389,14 +388,14 @@ i {
   grid-template-columns: 0.8fr 2fr 1fr 0.3fr 0.1fr;
   grid-template-rows: 0.2fr 2.2fr 0.3fr;
   grid-template-areas: "header header header header header"
-                       "sidebar content content content scroll"
-                       "sidebar footer footer footer footer";
-  height: 110vh;
+    "sidebar content content content scroll"
+    "sidebar footer footer footer footer";
+  height: 100vh;
   width: 98vw;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: 14px;
-
+  background-color: #171b23;
 }
 
 #header1 {
@@ -422,13 +421,15 @@ i {
 #footer1 {
   background-color: #243040;
   grid-area: footer;
+  height: 80px;
 }
 
 /* HEADER */
 .x1 {
   color: #5d6065;
-  margin-left: 1250px;
-  margin-top: 0px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 10px;
 }
 
 .header1 {
@@ -447,13 +448,6 @@ i {
   align-items: center;
 }
 
-/* SCROLLBAR */
-.scroll1 {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-
 /* SIDEBAR */
 .sidebar1 {
   color: #b3b3b3;
@@ -464,7 +458,7 @@ i {
 }
 
 .sbfooter1 {
-  margin-top: 200px;
+  margin-top: 140px;
   margin-left: 0px;
   font-weight: lighter;
 }
@@ -799,9 +793,24 @@ input[type=checkbox] {
   opacity: 5;
 }
 
-/* SETTINGS PAGE END */
-/*************************************/
-/*************************************/
-/*************************************/
-/*************************************/
-/*************************************/
+/* SCROLLBAR */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  /* SETTINGS PAGE END */
+  /*************************************/
+  /*************************************/
+  /*************************************/
+  /*************************************/
+  /*************************************/
