finished project for real now

--- a/style.css
+++ b/style.css
@@ -808,7 +808,8 @@ input[type=checkbox] {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-    
+
+}
   /* SETTINGS PAGE END */
   /*************************************/
   /*************************************/
